--- a/src/style.css
+++ b/src/style.css
@@ -1,53 +1,76 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 @media screen and (min-width: 320px) and (max-width: 1500px) { 
-    .one-container, .two-container{
-        width: 100%;
-        height: 100%;
+    body{
+        display: flex;
         text-align: center;
-        margin-top: 125px
+        justify-content: center;
+        font-family: 'Roboto', sans-serif;
     }
-    .two-container{
-    }
-    .one-container{
-    }
-    .email,.password,.sign-up,.login,.register{
-     margin-left: auto;
-     margin-right: auto;
+    .log-container{
+        background-color: #F2F2F2;
+        padding: 10px;
+        border-radius: 5px;
     }
     
-    p, h1{
-        text-align: center;
-    }
     .email, .password{
         display: block;
-        border: 1px solid rgb(180, 207, 231);
-        border-radius: 7px;
-        padding: 15px 30px;
+        border: none;
+        border-bottom: 1px solid black;
+        padding: 10px 20px;
         margin-top: 5px;
+        font-size: 15px;
     }
-    .sign-up, .login, .register{
-        background: rgb(153, 200, 238);
-        border-radius: 15px;
-        padding: 15px 30px;
+    .email:hover, .password:hover{
+        border-bottom:1px solid red;
+    }
+
+    .sign-up-btn, .login-btn, .log-out-btn{
+        border-radius: 5px;
+        width: 100%;
+        padding: 10px 20px;
         margin-top: 10px;
         color:beige;
+        border: none;
+        box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 5px 7px 0 rgba(0,0,0,0.19);
+        transition-duration:0.4s;
+        outline: none;
+        cursor: pointer;
     }
-    .sign-up:hover{
-        background: beige;
-        color: black;
-        border: 1px solid rgb(101, 179, 243);
-    }
-    .login:hover{
-        background: beige;
-        color: black;
-        border: 1px solid rgb(101, 179, 243);
-    }
-    .register{
+    .sign-up-btn{
         background: rgb(38, 63, 83);
     }
-    .register:hover{
+    .login-btn, .log-out-btn{
+        background: rgb(153, 200, 238);
+    }
+    .sign-up-btn:hover{
         background: rgb(179, 215, 245);
-        border: 1px solid rgb(101, 179, 243);
         color:black;
+    }
+    .login-btn:hover, .log-out-btn:hover{
+        background: beige;
+        color: black;
+    }
+    .sign-up-btn:active, .login-btn:active, .log-out-btn:active{
+        transform: translateY(3px);
+    }
+
+
+    .fa {
+        padding: 5px;
+        font-size: 30px;
+        margin: 5px 2px;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        
+    }
+    .fa-facebook {
+        background: #4267b2;
+        color: white;
+    }
+    .fa-google {
+        background: #dd4b39;
+        color: white;
     }
 
     
