--- a/src/style.css
+++ b/src/style.css
@@ -9,11 +9,13 @@ header{
     left: 0;
     right: 0;
     z-index: 1000;
-    background:rgb(231, 235, 240);
+    background:#00A3A5;
 }  
+
 label{
     float: left;
 } 
+
 .icon-header{
     margin-right: 25px;
     float: right;
@@ -22,36 +24,35 @@ label{
 }
 
 footer{
-text-align: center;
-padding: 10px;
-line-height: 10px;
-position: fixed;
-top: 0;
-z-index: 1000;
-display: flex;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    display: flex;
 }
-.icon{
+
+.icon-footer{
     width: 30px;
-    height: 30px;;
-    padding: 0px 0px 0px 50px;
+    height: 30px;
 }
 
 @media screen and (max-width: 500px) { 
-.footer{
-    width: 100%;
-    background: #dfe2e7;
-    padding: 10px;
-    line-height: 10px;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
-    z-index: 1000;
-}
-.icon{
-  padding: 0px 20px 0px 20px;
-      
-}
+    .footer{
+        width: 100%;
+        background: #dfe2e7;
+        padding: 10px;
+        line-height: 10px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        overflow: hidden;
+        z-index: 1000;
+    }
+    .icon-footer{
+    padding: 0px 20px 0px 20px;
+        
+    }
 }
 
 @media screen and (min-width: 300px) { 
@@ -65,8 +66,7 @@ display: flex;
         background-color: #F2F2F2;
         padding: 10px;
         border-radius: 5px;
-        margin-top: 50px;
-        margin-bottom: 50px;
+        margin:80px auto;
     }
     
     .email, .password{
@@ -76,41 +76,11 @@ display: flex;
         padding: 10px 20px;
         margin-top: 5px;
         font-size: 15px;
+        outline-color: #00A3A5;
     }
     .email:hover, .password:hover{
         border-bottom:1px solid red;
     }
-
-    .sign-up-btn, .login-btn{
-        border-radius: 5px;
-        width: 100%;
-        padding: 10px 20px;
-        margin-top: 10px;
-        color:beige;
-        border: none;
-        box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 5px 7px 0 rgba(0,0,0,0.19);
-        transition-duration:0.4s;
-        outline: none;
-        cursor: pointer;
-    }
-    .sign-up-btn{
-        background: rgb(38, 63, 83);
-    }
-    .login-btn{
-        background: rgb(153, 200, 238);
-    }
-    .sign-up-btn:hover{
-        background: rgb(179, 215, 245);
-        color:black;
-    }
-    .login-btn:hover{
-        background: beige;
-        color: black;
-    }
-    .sign-up-btn:active, .login-btn:active{
-        transform: translateY(3px);
-    }
-
 
     .fa {
         padding: 5px;
@@ -129,6 +99,37 @@ display: flex;
         background: #dd4b39;
         color: white;
     }
-  
+
+    .sign-up-btn, .login-btn{
+        border-radius: 5px;
+        width: 100%;
+        padding: 10px 20px;
+        margin-top: 10px;
+        color:white;
+        border: none;
+        box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 5px 7px 0 rgba(0,0,0,0.19);
+        transition-duration:0.4s;
+        outline: none;
+        cursor: pointer;
+    }
+    .sign-up-btn{
+        background-color: #009698;
+    }
+    .login-btn{
+        background-color: #00A3A5;
+    }
+    .sign-up-btn:hover, .login-btn:hover{
+        background-color: #007D7E;
+    }
+    .sign-up-btn:active, .login-btn:active{
+        transform: translateY(3px);
+    }
+
+    .signup-question{
+        cursor: pointer;
+    }
+    .signup-question:hover{
+        color: #00A3A5;
+    }  
 }
 
