--- a/src/style.css
+++ b/src/style.css
@@ -14,13 +14,23 @@ header{
 
 label{
     float: left;
-} 
+}
+
+.background {
+    position: absolute;
+}
 
 .icon-header{
     margin-right: 25px;
     float: right;
     width: 30px;
     height: 30px;;
+}
+
+#post-container {
+    position: absolute;
+    top:50%;
+    background-color: #F2F2F2;
 }
 
 footer{
@@ -38,6 +48,13 @@ footer{
 }
 
 @media screen and (max-width: 500px) { 
+    .background {
+        width:100%;
+        height: 100%;
+        z-index: inherit 0;
+        position: absolute;
+    }
+
     .footer{
         width: 100%;
         background: #dfe2e7;
@@ -55,6 +72,11 @@ footer{
     }
 }
 
+p {
+    font-family: Roboto;
+    font-size: 20px;
+}
+
 @media screen and (min-width: 300px) { 
     body{
         display: flex;
@@ -62,13 +84,20 @@ footer{
         justify-content: center;
         font-family: 'Roboto', sans-serif;
     }
-    .log-container{
+    .log-container {
+        width: 70%;
+        z-index: 100;
         background-color: #F2F2F2;
         padding: 10px;
         border-radius: 5px;
         margin:80px auto;
     }
-    
+   
+    #post-container {
+        width:75%;
+        border-radius: 6px;
+    }
+
     .email, .password{
         display: block;
         border: none;
@@ -82,6 +111,26 @@ footer{
         border-bottom:1px solid red;
     }
 
+    .edit, .delete {
+        font-family: Roboto;
+        font-size: 17px;
+        color:white;
+        background-color:#00A3A5;
+        border: none;
+    }
+
+    .edit:hover, .delete:hover {
+        background-color: #007D7E;
+    }
+
+    .edit-icon, .error-icon {
+        width:17px;
+        height: 17px;
+    }
+
+    h2 {
+        font-size: 18px;
+    }
     .fa {
         padding: 5px;
         font-size: 30px;
@@ -100,7 +149,8 @@ footer{
         color: white;
     }
 
-    .sign-up-btn, .login-btn{
+    .sign-up-btn, .login-btn, 
+    .go-back-btn, .submit {
         border-radius: 5px;
         width: 100%;
         padding: 10px 20px;
@@ -112,7 +162,9 @@ footer{
         outline: none;
         cursor: pointer;
     }
-    .sign-up-btn{
+
+    .sign-up-btn, .go-back-btn,
+    .submit {
         background-color: #009698;
     }
     .login-btn{
