--- a/src/style.css
+++ b/src/style.css
@@ -47,7 +47,7 @@ footer{
     height: 30px;
 }
 
-@media screen and (max-width: 500px) { 
+@media screen and (max-width: 700px) { 
     .background {
         width:100%;
         height: 100%;
@@ -77,7 +77,7 @@ p {
     font-size: 20px;
 }
 
-@media screen and (min-width: 300px) { 
+@media screen and (min-width: 320px) { 
     body{
         display: flex;
         text-align: center;
@@ -99,10 +99,9 @@ p {
     }
 
     .email, .password{
-        display: block;
         border: none;
         border-bottom: 1px solid black;
-        padding: 10px 20px;
+        padding: 5% 12%;
         margin-top: 5px;
         font-size: 15px;
         outline-color: #00A3A5;
@@ -162,7 +161,6 @@ p {
         outline: none;
         cursor: pointer;
     }
-
     .sign-up-btn, .go-back-btn,
     .submit {
         background-color: #009698;
@@ -184,4 +182,5 @@ p {
         color: #00A3A5;
     }  
 }
+
 
