--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ header{
 }
 
 body{
-    background-image: url("https://i.ibb.co/MGJqSV1/hobbies.jpg");
+    background-color:rgba(182, 239, 239, 0.3);
 }
 
 footer{
@@ -153,5 +153,9 @@ footer{
     .signup-question:hover{
         color: #00A3A5;
     }  
+}
+
+.post-container{
+    background-color: rgba(182, 239, 239, 0.3);
 }
 
