--- a/src/style.css
+++ b/src/style.css
@@ -44,6 +44,19 @@ footer{
     padding: 0px 0px 0px 20px;
 }
 
+.form-textarea{
+    border: none;
+    margin-top: 140%;
+    margin-right: 30%;
+    width: 100%!important;
+    max-height: 150px;
+    min-height: 60px;
+  }
+  
+.form-control:focus{
+    box-shadow: none;
+}
+
 @media screen and (max-width: 500px) { 
     .footer{
         width: 100%;
