--- a/src/style.css
+++ b/src/style.css
@@ -68,7 +68,7 @@ footer{
         font-family: 'Roboto', sans-serif;
     }
     .log-container {
-        background-color: rgba(242, 242, 242, 0.9);
+        background-color: rgba(222, 246, 246, 0.6);
         padding: 10px;
         border-radius: 5px;
         margin:80px auto;
@@ -171,6 +171,7 @@ footer{
     .post-container{
         background-color: rgba(182, 239, 239, 0.3);
         width: 800px;
+        height: 230px;
         margin: 15px 0;
         border-radius: 8px;
         padding: 5px 0;
