--- a/src/style.css
+++ b/src/style.css
@@ -171,10 +171,10 @@ footer{
     .post-container{
         background-color: rgba(182, 239, 239, 0.3);
         width: 800px;
-        height: 230px;
+        height: 235px;
         margin: 15px 0;
         border-radius: 8px;
-        padding: 5px 0;
+        padding: 10px 0;
         font-family: 'Roboto', sans-serif;
         color: #282828;
         box-shadow: 0 3px 4px 0 rgba(0,0,0,0.24), 0 3px 5px 0 rgba(0,0,0,0.19);
@@ -198,7 +198,9 @@ footer{
         text-align: justify;
         padding: 0;
         margin: 0;
-        outline: 2px solid #007D7E;
+        outline: 3px solid #007D7E;
+        background-color: #f3eded;
+        color: rgba(0, 150, 152, 0.8);
     }
 
     .post{
@@ -255,6 +257,7 @@ footer{
         height: 35px;
         padding: 0 0 0 10px;
         align-content: center;
+        cursor: pointer;
     }
     .settings-box, .interact-box{
         float: right;
@@ -276,6 +279,7 @@ footer{
     .click-counter-likes{
         color: red;
     }
+
 }
 
 
