--- a/src/style.css
+++ b/src/style.css
@@ -18,8 +18,15 @@ header{
     height: auto;
 } 
 
-.icon-header{
+.log-out-btn{
+    background-color: #00A3A5;
+    border: none;
+    float: right;
     margin-right: 25px;
+}
+
+.icon-header{
+    margin:0;
     float: right;
     width: 40px;
     height: 40px;;
