--- a/src/style.css
+++ b/src/style.css
@@ -59,13 +59,14 @@ footer{
 }
 
 @media screen and (max-width: 500px) { 
+
     .footer{
         width: 100%;
         background: #dfe2e7;
         line-height: 10px;
         padding: 10px;
         position: fixed;
-        bottom: 0;
+        bottom: 0%;
         left: 0;
         overflow: hidden;
         z-index: 1000;
@@ -86,26 +87,28 @@ footer{
         list-style-type: none;
     }
 
-    .log-container {
+    /* .log-container {
         /* background-color: rgba(222, 246, 246, 0.6);
         padding: 10px;
         border-radius: 5px;
         margin:80px auto; */
         /* text-align: center;
-        list-style-type: none; */
+        list-style-type: none; 
 
     }
-
+*/
     .logoname-img{
         width: 230px;
+        margin-left: 15%;
     }
 
     .logotipo{
         color:#00A3A5;
+        margin-left: 15%;
     }
     .logo-img{
         width: 50px;
-        height: 50px;;
+        height: 50px;
     }
     
     .email, .password, .user-name, .information{
