--- a/src/style.css
+++ b/src/style.css
@@ -1,405 +1,394 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-header{
-    background:black;
-    width: 100%;
-    padding: 20px;
-    position: fixed;
-    top: 0%;
-    left: 0%;
-    right: 0%;
-    z-index: 1000;
-    background:#00A3A5;
-    box-shadow: 0 3px 5px 0 rgba(7, 7, 7, 0.1), 0 4px 6px 0 rgba(0,0,0,0.09);
-}  
-
-.logo-img{
-    float: left;
-    width: 25px;
-    height: auto;
-} 
-
-.log-out-btn{
-    background-color: #00A3A5;
-    border: none;
-    float: right;
-    margin-right: 12%;
+header {
+	background: black;
+	width: 100%;
+	padding: 20px;
+	position: fixed;
+	top: 0%;
+	left: 0%;
+	right: 0%;
+	z-index: 1000;
+	background: #00A3A5;
+	box-shadow: 0 3px 5px 0 rgba(7, 7, 7, 0.1), 0 4px 6px 0 rgba(0, 0, 0, 0.09);
 }
 
-.icon-header{
-    margin: 0;
-    float: right;
-    width: 40px;
-    height: 40px;
-    background:#00A3A5;
+.logo-img {
+	float: left;
+	width: 25px;
+	height: auto;
 }
 
-body{
-    background: url();
+.log-out-btn {
+	background-color: #00A3A5;
+	border: none;
+	float: right;
+	margin-right: 12%;
+}
+
+.icon-header {
+	margin: 0;
+	float: right;
+	width: 40px;
+	height: 40px;
+	background: #00A3A5;
+}
+
+body {
+	background: url();
 }
 
 @media screen and (min-width: 1024px) {
-    .footer{
-        width: 100%;
-        line-height: 10px;
-        padding: 10px 20px;
-        position: fixed;
-        top: 3%;
-        left: 0;
-        overflow: hidden;
-        z-index: 1000;
-    }
+	.footer {
+		width: 100%;
+		line-height: 10px;
+		padding: 10px 20px;
+		position: fixed;
+		top: 3%;
+		left: 0;
+		overflow: hidden;
+		z-index: 1000;
+	}
 }
 
-@media screen and (max-width: 1200px) { 
-
-    .footer{
-        width: 100%;
-        background: #dfe2e7;
-        line-height: 10px;
-        padding: 10px;
-        position: fixed;
-        bottom: 0%;
-        left: 0;
-        overflow: hidden;
-        z-index: 1000;
-    }
-    .icon-footer{
-    padding: 0px 10px 0px 10px;   
-    }
+@media screen and (max-width: 1200px) {
+	.footer {
+		width: 100%;
+		background: #dfe2e7;
+		line-height: 10px;
+		padding: 10px;
+		position: fixed;
+		bottom: 0%;
+		left: 0;
+		overflow: hidden;
+		z-index: 1000;
+	}
+	.icon-footer {
+		padding: 0px 10px 0px 10px;
+	}
 }
 
-@media screen and (min-width: 320px) { 
-    footer{
-        text-align: center;
-        padding: 20px;
-        position: absolute;
-        bottom:0;
-        z-index: 1000;
-        display: fixed;
-        width: 50%;
-        margin: 0;
-    }
-      
-    .icon-footer{
-        width: 30px;
-        height: 30px;
-        padding: 0 20px;
-    }
-    .icon-footer:hover{
-        opacity: 0.8;
-    }
-
-    h5 {
-        font-size: 15px;
-        margin-top: 15%;
-        margin-left: 18%;
-    }
-    
-    body{
-        display: flex;
-        justify-content: center;
-        font-family: 'Roboto', sans-serif;
-    }
-
-    li{
-        list-style-type: none;
-    }
-
-    .log-container {
-        height: 50%;
-        margin-top: 30px;
-        text-align: center;
-*/
-    }
-
-    .logoname-img{
-        width: 230px;
-        margin-left: 5%;
-    }
-
-    .logotipo{
-        color:#00A3A5;
-        margin-left: 2%;
-    }
-    .logo-img{
-        width: 50px;
-        height: 50px;
-    }
-    
-    .email, .password, .user-name, .information{
-        display: block;
-        border: none;
-        border-bottom: 1px solid black;
-        padding: 10px 20px;
-        margin: 5px auto;
-        width: 80%;
-        font-size: 15px;
-        outline-color: #00A3A5;
-    }
-    .email:hover, .password:hover, .user-name:hover, .information:hover{
-        border-bottom:1px solid red;
-    }
-
-    .fa {
-        padding: 5px;
-        font-size: 30px;
-        margin: 5px 2px;
-        border: none;
-        cursor: pointer;
-        width: 100%;
-        
-    }
-    .fa-facebook {
-        background: #4267b2;
-        color: white;
-    }
-    .fa-google {
-        background: #dd4b39;
-        color: white;
-    }
-    .fa-twitter{
-        background: rgb(110, 194, 250);
-        color:white;
-    }
-
-    .sign-up-btn, .login-btn{
-        border-radius: 5px;
-        width: 100%;
-        padding: 10px 20px;
-        margin-top: 10px;
-        color:white;
-        border: none;
-        box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 5px 7px 0 rgba(0,0,0,0.19);
-        transition-duration:0.4s;
-        outline: none;
-        cursor: pointer;
-    }
-
-    .sign-up-btn{
-        background-color: #009698;
-    }
-    .login-btn{
-        background-color: #00A3A5;
-    }
-    .sign-up-btn:hover, .login-btn:hover{
-        background-color: #007D7E;
-    }
-    .sign-up-btn:active, .login-btn:active{
-        transform: translateY(3px);
-    }
-
-    .signup-question{
-        cursor: pointer;
-        text-align: center;
-    }
-    .signup-question:hover{
-        color: #00A3A5;
-    }  
-.container{
-    width: 100%;
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-    margin:80px auto; 
-}
-.ft{
-    height: 120px;
-    width: 120px;
-    border-radius: 50%;
-    margin: 10px auto;
-    display: block;
-    background: #283f68;
-    border: solid rgba(240, 239, 237, 0.7) 5px;
-}
-
-#user-pic-post{
-    height: 60px;
-    width: 60px;
-    border-radius: 50%;
-    margin: 2px;
-    background: #283f68;
-    border: solid rgba(240, 239, 237, 0.7) 2px;  
-}
-
-.container-information{
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-    font-size: 15pt;
-}
-.name{
-    font-size: 30px;
-    font-weight: bold;
-}
-.info{
-    display:block;
-    margin-top: 20px;
-    font-size: 25px;
-}
-.table{
-    margin-top: 30px;
-}
-.table td{
-    padding: 0px 15px 0px 15px;
-}
-hr{
-    width: 1000px;
-    padding: 1px;
-    background: #009698;
-}
-
-    /* Sección de posts */
-    .text-align{
-        text-align: center;
-    }
-
-    .activity-filter{
-        margin: 5px;
-    }
-    .privacy-filter{
-        margin: 5px;
-        height: 25px;
-    }
-
-    .post-container{
-        background-color: rgba(182, 239, 239, 0.3);
-        width: 90%;
-        height: 260px;        margin-right: 0%;
-        margin-left:5%;
-        margin-top:25%;
-        border-radius: 8px;
-        padding: 10px 0;
-        font-family: 'Roboto', sans-serif;
-        color: #282828;
-        box-shadow: 0 3px 4px 0 rgba(0,0,0,0.24), 0 3px 5px 0 rgba(0,0,0,0.19);
-    }
-
-    .post-container-posted{
-        background-color: rgba(182, 239, 239, 0.3);
-        width: 100%;
-        height: 235px;
-        margin: 90px 0px;
-        border-radius: 8px;
-        padding: 10px 0;
-        font-family: 'Roboto', sans-serif;
-        color: #282828;
-        box-shadow: 0 3px 4px 0 rgba(0,0,0,0.24), 0 3px 5px 0 rgba(0,0,0,0.19);
-    }
-
-    .post-container h1{
-        margin: 0 0 20px 0;
-    }
-
-    .fa-arrow-left{
-        padding: 0 0 0 5px;
-        margin: 0;
-        width: 15px;
-    }
-
-    .text-area{
-        width: 96%;
-        resize: none;
-        font-size: 20px;
-        border: none;
-        text-align: justify;
-        padding: 0;
-        margin-left: 2%;
-        outline: 2px solid #007D7E;
-        background-color: #f3eded;
-        color: rgba(0, 150, 152, 0.8);
-    }
-
-    .post{
-        font-size: 15px;
-        border-radius: 5px;
-        width: 150px;
-        padding: 10px 20px;
-        margin: 10px 5px 5px 0;
-        color:white;
-        background-color: #009698;
-        border: none;
-        box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 5px 7px 0 rgba(0,0,0,0.19);
-        transition-duration:0.4s;
-        outline: none;
-        cursor: pointer;
-        float: right;
-    }
-    .post:hover, .save-post-edit:hover{
-        background-color: #007D7E;
-    }
-    .post:active, .save-post-edit:active{
-        transform: translateY(3px);
-    }
-
-    .save-post-edit{
-        font-size: 15px;
-        border-radius: 5px;
-        width: 150px;
-        padding: 10px 20px;
-        margin: 60px 5px 5px 0;
-        color: white;
-        background-color: #009698;
-        border: none;
-        box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 5px 7px 0 rgba(0,0,0,0.19);;
-        transition-duration: 0.4s;
-        outline: none;
-        cursor: pointer;
-        float: left;
-    }
-    /* Post Publicado */
-    .img-icon-post{
-        width: 25px;
-        height: auto;
-        padding: 0 5px;
-        cursor: pointer;
-    }
-    .img-icon-post:hover{
-        opacity: 0.8;
-    }
-
-    .fa-unlock, .fa-lock{
-        width:25px;
-        margin:0;
-        cursor: auto;
-    }
-    .user-box{
-        width:75%;
-        height: 75px;
-        display: flex; 
-        align-content: center;    
-    }
-    .user-pic{
-        width: 70px;
-        height: 70px;
-        padding: 0 15px 0 5px;
-        margin: 0;
-    }
-    .user-name-post{
-        margin-top:2%;
-        font-size: 20px;
-        width:100%;
-        padding: 0 0 0 10px;
-        align-content: center;
-        cursor: pointer;
-    }
-    .settings-box, .interact-box{
-        float: right;
-    }
-    .settings-box{
-        width: 80px;
-    }
-    .privacy-box{
-        float: left;
-    }
-    .click-counter-favorites, .click-counter-likes{
-        font-size: 20px;
-        width: 5px;
-        margin: 0;
-    }
-    .click-counter-favorites{
-        color: gold;
-    }
-    .click-counter-likes{
-        color: red;
-    }
+@media screen and (min-width: 320px) {
+	footer {
+		text-align: center;
+		padding: 20px;
+		position: absolute;
+		bottom: 0;
+		z-index: 1000;
+		display: fixed;
+		width: 50%;
+		margin: 0;
+	}
+	.icon-footer {
+		width: 30px;
+		height: 30px;
+		padding: 0 20px;
+	}
+	.icon-footer:hover {
+		opacity: 0.8;
+	}
+	h5 {
+		font-size: 15px;
+		margin-top: 15%;
+		margin-left: 18%;
+	}
+	body {
+		display: flex;
+		justify-content: center;
+		font-family: 'Roboto', sans-serif;
+	}
+	li {
+		list-style-type: none;
+	}
+	.log-container {
+		height: 50%;
+		margin-top: 30px;
+		text-align: center;
+	}
+	.logoname-img {
+		width: 230px;
+		margin-left: 5%;
+	}
+	.logotipo {
+		color: #00A3A5;
+		margin-left: 2%;
+	}
+	.logo-img {
+		width: 50px;
+		height: 50px;
+	}
+	.email,
+	.password,
+	.user-name,
+	.information {
+		display: block;
+		border: none;
+		border-bottom: 1px solid black;
+		padding: 10px 20px;
+		margin: 5px auto;
+		width: 80%;
+		font-size: 15px;
+		outline-color: #00A3A5;
+	}
+	.email:hover,
+	.password:hover,
+	.user-name:hover,
+	.information:hover {
+		border-bottom: 1px solid red;
+	}
+	.fa {
+		padding: 5px;
+		font-size: 30px;
+		margin: 5px 2px;
+		border: none;
+		cursor: pointer;
+		width: 100%;
+	}
+	.fa-facebook {
+		background: #4267b2;
+		color: white;
+	}
+	.fa-google {
+		background: #dd4b39;
+		color: white;
+	}
+	.fa-twitter {
+		background: rgb(110, 194, 250);
+		color: white;
+	}
+	.sign-up-btn,
+	.login-btn {
+		border-radius: 5px;
+		width: 100%;
+		padding: 10px 20px;
+		margin-top: 10px;
+		color: white;
+		border: none;
+		box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.24), 0 5px 7px 0 rgba(0, 0, 0, 0.19);
+		transition-duration: 0.4s;
+		outline: none;
+		cursor: pointer;
+	}
+	.sign-up-btn {
+		background-color: #009698;
+	}
+	.login-btn {
+		background-color: #00A3A5;
+	}
+	.sign-up-btn:hover,
+	.login-btn:hover {
+		background-color: #007D7E;
+	}
+	.sign-up-btn:active,
+	.login-btn:active {
+		transform: translateY(3px);
+	}
+	.signup-question {
+		cursor: pointer;
+		text-align: center;
+	}
+	.signup-question:hover {
+		color: #00A3A5;
+	}
+	.container {
+		width: 100%;
+		z-index: 1000;
+		display: flex;
+		justify-content: center;
+		padding: 10px;
+		margin: 80px auto;
+	}
+	.ft {
+		height: 120px;
+		width: 120px;
+		border-radius: 50%;
+		margin: 10px auto;
+		display: block;
+		background: #283f68;
+		border: solid rgba(240, 239, 237, 0.7) 5px;
+	}
+	#user-pic-post {
+		height: 60px;
+		width: 60px;
+		border-radius: 50%;
+		margin: 2px;
+		background: #283f68;
+		border: solid rgba(240, 239, 237, 0.7) 2px;
+	}
+	.container-information {
+		text-align: center;
+		font-family: 'Roboto', sans-serif;
+		font-size: 15pt;
+	}
+	.name {
+		font-size: 30px;
+		font-weight: bold;
+	}
+	.info {
+		display: block;
+		margin-top: 20px;
+		font-size: 25px;
+	}
+	.table {
+		margin-top: 30px;
+	}
+	.table td {
+		padding: 0px 15px 0px 15px;
+	}
+	hr {
+		width: 1000px;
+		padding: 1px;
+		background: #009698;
+	}
+	/* Sección de posts */
+	.text-align {
+		text-align: center;
+	}
+	.activity-filter {
+		margin: 5px;
+	}
+	.privacy-filter {
+		margin: 5px;
+		height: 25px;
+	}
+	.post-container {
+		background-color: rgba(182, 239, 239, 0.3);
+		width: 90%;
+		height: 260px;
+		margin-right: 0%;
+		margin-left: 5%;
+		margin-top: 25%;
+		border-radius: 8px;
+		padding: 10px 0;
+		font-family: 'Roboto', sans-serif;
+		color: #282828;
+		box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.24), 0 3px 5px 0 rgba(0, 0, 0, 0.19);
+	}
+	.post-container-posted {
+		background-color: rgba(182, 239, 239, 0.3);
+		width: 100%;
+		height: 235px;
+		margin: 90px 0px;
+		border-radius: 8px;
+		padding: 10px 0;
+		font-family: 'Roboto', sans-serif;
+		color: #282828;
+		box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.24), 0 3px 5px 0 rgba(0, 0, 0, 0.19);
+	}
+	.post-container h1 {
+		margin: 0 0 20px 0;
+	}
+	.fa-arrow-left {
+		padding: 0 0 0 5px;
+		margin: 0;
+		width: 15px;
+	}
+	.text-area {
+		width: 96%;
+		resize: none;
+		font-size: 20px;
+		border: none;
+		text-align: justify;
+		padding: 0;
+		margin-left: 2%;
+		outline: 2px solid #007D7E;
+		background-color: #f3eded;
+		color: rgba(0, 150, 152, 0.8);
+	}
+	.post {
+		font-size: 15px;
+		border-radius: 5px;
+		width: 150px;
+		padding: 10px 20px;
+		margin: 10px 5px 5px 0;
+		color: white;
+		background-color: #009698;
+		border: none;
+		box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.24), 0 5px 7px 0 rgba(0, 0, 0, 0.19);
+		transition-duration: 0.4s;
+		outline: none;
+		cursor: pointer;
+		float: right;
+	}
+	.post:hover,
+	.save-post-edit:hover {
+		background-color: #007D7E;
+	}
+	.post:active,
+	.save-post-edit:active {
+		transform: translateY(3px);
+	}
+	.save-post-edit {
+		font-size: 15px;
+		border-radius: 5px;
+		width: 150px;
+		padding: 10px 20px;
+		margin: 60px 5px 5px 0;
+		color: white;
+		background-color: #009698;
+		border: none;
+		box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.24), 0 5px 7px 0 rgba(0, 0, 0, 0.19);
+		;
+		transition-duration: 0.4s;
+		outline: none;
+		cursor: pointer;
+		float: left;
+	}
+	/* Post Publicado */
+	.img-icon-post {
+		width: 25px;
+		height: auto;
+		padding: 0 5px;
+		cursor: pointer;
+	}
+	.img-icon-post:hover {
+		opacity: 0.8;
+	}
+	.fa-unlock,
+	.fa-lock {
+		width: 25px;
+		margin: 0;
+		cursor: auto;
+	}
+	.user-box {
+		width: 75%;
+		height: 75px;
+		display: flex;
+		align-content: center;
+	}
+	.user-pic {
+		width: 70px;
+		height: 70px;
+		padding: 0 15px 0 5px;
+		margin: 0;
+	}
+	.user-name-post {
+		margin-top: 2%;
+		font-size: 20px;
+		width: 100%;
+		padding: 0 0 0 10px;
+		align-content: center;
+		cursor: pointer;
+	}
+	.settings-box,
+	.interact-box {
+		float: right;
+	}
+	.settings-box {
+		width: 80px;
+	}
+	.privacy-box {
+		float: left;
+	}
+	.click-counter-favorites,
+	.click-counter-likes {
+		font-size: 20px;
+		width: 5px;
+		margin: 0;
+	}
+	.click-counter-favorites {
+		color: gold;
+	}
+	.click-counter-likes {
+		color: red;
+	}
 }
